# codex-cli

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  agent.py  codex.py  codex_gateway.py  config.py  count_src_lines_yaml.py  daily_billing.py  file_editor.py  init_agent.py  main.py  mcodex.bat  pyproject.toml  qwen3.5-enhanced.jinja  requirements.txt  selected_code.txt  start_gateway.ps1  tools.py  upload_config.yaml
.codex/: task.json
agent/: lessons.md  quality.yaml  skills.md
config/: mcp_config.yaml  upload_config.yaml
docs/: ENGINEERING_PROTOCOL.md  GIT_TOOLS.md  MCP_USAGE.md  VFS_MODE.md
gateway/: app.py
scripts/: mcodex.bat  mcodex.ps1  start_gateway - 快捷方式.lnk  start_gateway.ps1  start_rjcut_studio.ps1
src/codex/: cli.py  config.py  file_editor.py  pack_for_ai.py  remote.py  tools.py
src/codex/mcp/: manager.py
tests/: test1.py  test_ttft_cache.py
